--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Exchange</title>
   </head>
   <body>
-    <div class="container">
-      <div id="root"></div>
+    <div class="container mt-4">
+      <div id="root" class="w-50 justify-content-center align-items-center"></div>
       <script type="module" src="/src/main.jsx"></script>
     </div>
   </body>
